@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.751 2014/03/28 01:35:30 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.752 2014/03/28 01:45:34 floppym Exp $
+
+*python-3.4.0 (28 Mar 2014)
+
+  28 Mar 2014; Mike Gilbert <floppym@gentoo.org> +python-3.4.0.ebuild:
+  Version bump. Permanently drop the 'doc' use flag.
 
 *python-3.3.5 (28 Mar 2014)
 
